# python-packaging-benchmark

./: Dockerfile  README.md  run_benchmark.sh
flit/: pyproject.toml
hatch/: pyproject.toml
poetry/: README.rst  pyproject.toml
